2001-06-18  Christian Ruppert <arc@gmx.li>

	* uwm/placement.c: moved removal of PLACEIT flag to the end of PlaceWin
	  to avoid some confusion in PlaceWin


2001-06-17  Christian Ruppert <arc@gmx.li>

	* uwm/properties.c, uwm/handlers.c, uwm/uwm.c, uwm/windows.c,
	  uwm/winmenu.c, uwm/workspaces.c: replaced SetWinMapState by
	  SetIsMapState or SetSeemsMapState and uc->wmstate == ... by
	  Is... or Seems... .
	* uwm/uwm.h: added macros IsNormal, IsIconic, IsWithdrawn, SeemsNormal,
	  SeemsIconic and SeemsWithdrawn as well as uwm's internal window
	  status UltimateContext.uwmstatus.
	* uwm/properties.c: split SetWinMapState in SetWinSeemsState and
	  SetWinIsState.
	* uwm/properties.h: corrected prototypes for SetWinXXXState.
	* uwm/placement.c: PlaceWin now removes the PLACEIT flag from placed
	  windows UltimateContext.
	* uwm/windows.c: enabled deiconifying of nameless windows

2001-05-28  Christian Ruppert <arc@gmx.li>

	* uwm/winmenu.c(StopWinMenu): winmenu is now unmapped AFTER selected
	  action is taken.
	* uwm/windows.c(ActivateWin): some cosmetics
	* uwm/windows.c(ActivateWin): windows not in NormalState are not
	  being activated.
	* uwm/windows.c(ActivateWin): moved if(uc = OldActive) directly around
	  graphics refreshing since we need to re-set the focus in some cases
	  although the window is already active.
	* uwm/windows.c: removed unused global variable RaisedWin

2001-05-28  Christian Ruppert <arc@gmx.li>

	* uwm/winmenu.c: changed global variables name from x1 to hexX and from
	  y1 to hexY.
	* uwm/winmenu.c: changed pointer warping to be done after pointer
	  grabbing in StartWinMenu.
	* uwm/winmenu.c: changed pointer ungrabbing to be done after warping
	  back the pointer.

2001-05-26  Christian Ruppert <arc@gmx.li>

	* uwm/menu.c: changed SelectItem syntax (added state argument)

2001-05-25  Christian Ruppert <arc@gmx.li>

	* uwm/uwm.h: added ButtonCount
	* uwm/winmenu.c: removed Buttoncount variable and replaced it by
	  ButtonCount macro